app/_assets/stylesheets/badges.less
.badge {
  display: inline-flex;
  margin: 0;
  padding: 0;
  border-radius: 2px;

  &:after {
    padding: 4px 12px;
    font-style: normal;
    font-weight: 600;
    font-size: 11px;
    flex: none;
    line-height: 12px;
    display: flex;
    height: auto;
    text-align: center;
    align-items: center;
    border-radius: 2px;
  }

  &.paid {
    background: #F2F6FE;

    &::after {
      content: "KONNECT PAID";
      color: #0364AC;
    }
  }

  &.premium {
    background: @blue-100;

    &::after {
      content: "KONNECT PREMIUM";
      background: linear-gradient(90deg, #5052FD 0%, #033796 100%);
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
      background-clip: text;
      text-fill-color: transparent;
    }
  }

  &.techpartner::after {
    content: "TECH PARTNER";
    color: #008871;
    background: #E8F8F5;
  }

  &.enterprise::after {
    content: "GATEWAY ENTERPRISE";
    color: @steel-700;
    background: @steel-100;
  }

  &.free::after {
    content: "FREE";
    color: black;
    border-color: @black-20;
    background-color: @black-20;
  }

  &.dbless::after {
    content: "DB-LESS COMPATIBLE";
    color: white;
    border-color: @green-500;
    background-color: @green-500;
  }

  &.beta::after {
    content: "BETA";
    color: white;
    border-color: @red-700;
    background-color: @red-700;
    text-align: center;
  }

  &.alpha::after {
    content: "TECH PREVIEW";
    color: white;
    border-color: @steel-400;
    background-color: @steel-400;
    text-align: center;
  }

  &.oss::after {
    content: "OSS ONLY";
    color: white;
    border-color: #6e30bf;
    background-color: #6e30bf;
    text-align: center;
  }

  &.package::after {
    content: "Package"; 
    color: white;
    border-color: @steel-400;
    background-color: @steel-400;
    text-align: center;
    margin-right: 2px;
  }

  &.docker::after {
    content: "Docker";
    color: white;
    border-color: #6e30bf;
    background-color: #6e30bf;
    text-align: center;
    margin-right: 2px;
  }

  &.ami::after {
    content: "AMI";
    color: white;
    border-color: @black-80;
    background-color: @black-80;
    margin-right: 2px;
  }

  // Tooltip container
  .tooltip {
    position: relative;
    display: inline-block;
    padding: 0;
  }

  // Tooltip text styling
  .tooltiptext {
    font-family: @family-display;
    width: 150px;
    display: none;
    font-size: 13px;
    font-weight: 400;
    line-height: 20px;
    margin-top: 0.1rem;
    color: #fff;
    top: 100%;
    background-color: @black-80;
    text-align: center;
    padding: 5px;
    border-radius: 4px;
    position: absolute;
    z-index: 10;

    a {
      color: white;
    }
  }

  &:hover,
  &:focus {
    .tooltiptext {
      display: block;
    }
  }
}

span.badge {
  vertical-align: text-bottom;
}

h2.badge,
h3.badge,
h4.badge,
h5.badge {
  &:after {
    margin-left: 7px;
    max-height: 12px;
    align-self: center;
    padding: 5px 12px 4px;
  }

  &:hover,
  &:focus {
    .tooltiptext {
      left: 7px;
    }
  }
}

// badges and tooltips on page titles
h1.badge {
  &:after {
    margin-left: 7px;
  }

  &:hover,
  &:focus {
    .tooltiptext {
      right: 0;
      top: 0;
    }
  }
}

h2.badge {
  &:hover,
  &:focus {
    .tooltiptext {
      top: 3px;
    }
  }
}

h3.badge {
  &:hover,
  &:focus {
    .tooltiptext {
      top: 4px;
    }
  }
}

h4.badge,
h5.badge {
  &:hover,
  &:focus {
    .tooltiptext {
      top: 5px;
    }
  }
}

a.badge {
  &:hover,
  &:focus {
    opacity: 1;
    text-decoration: none;
  }
}

.badge-container {
  a > .tooltip > .tooltiptext {
    margin-top: 0.5em;
  }
}

// Tooltips in tables; for the last table row, the tooltip moves to the right of
// the element so that the table doesn't add a scrollbar
table > tbody > tr {
  &:last-of-type {
    .badge {
      &:hover,
      &:focus {
        .tooltiptext {
          left: 100%;
          bottom: 105%;
          top: unset;
        }
      }
    }
  }
}

